# Agentic-AI-Design-Patterns

./: .env.example  .gitignore  README.md  pyproject.toml
agentic-patterns/: 0_intro.py  1a_tool_test.py  1b_tool_use.py  2_reflect.py  3_planning.py  4_hierarchical.py
